# learnopengl_exercise

./: .gitignore  CMakeLists.txt  README.md  main
src/: camera.h  common_draw.h  mesh.h  model.h  shader_s.h
src/01_getiting_started/: camera  camera.cpp  coordinate  coordinate.cpp  cube_vertices.h  hello_triangle  hello_triangle.cpp  hello_window  hello_window.cpp  shader_moreattr  shader_moreattr.cpp  shader_uniform.cpp  texture  texture.cpp  transformation  transformation.cpp
src/01_getiting_started/shader/: shader_moreattr.vs  texture.fs
src/02_lighting/: basic_lighting  basic_lighting.cpp  basic_lighting_vertex_data.h  colors  colors.cpp  light_casters.direction.cpp  light_casters.point.cpp  light_casters.spotlight.cpp  lighting_maps.cpp  materials.cpp  multiple_lights.cpp  vertex_data_textures.h
src/02_lighting/shader/: basic_lighting.fs  basic_lighting.vs  light_casters.direction.fs  light_casters.point.fs  light_casters.spotlight.fs  lighting_maps.fs  multiple_lights.fs
src/03_model_loading/: mesh.cpp  model.cpp
src/03_model_loading/shader/: model.fs
src/04_advanced_opengl/: blending.cpp  block_and_plane_vertices.h  cubemaps.cpp  depth_testing.cpp  face_culling.cpp  framebuffers.cpp  geometry_shader.cpp  instancing.cpp  stencil_testing.cpp
src/04_advanced_opengl/shader/: blending.fs  cubemap_obj.fs  depth_testing.fs  framebuffers.fs  framebuffers.sharp.fs  geometry_shader.fs  geometry_shader.gs  (+3 more)
src/05_advanced_lighting/: advanced_lighting.cpp  gamma_correction.cpp  vertices_data.h
src/tool/: img2c.cpp
src/toy/: mesh.h  mmd_loader.cpp  model.h
(+6 files in other folders)
